--- a/Quest_0229/Samsung_Stock_PJ.ipynb
+++ b/Quest_0229/Samsung_Stock_PJ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "50fbbd8c",
+   "id": "e21da1bd",
    "metadata": {},
    "source": [
     "# 프로젝트 : 주식 예측에 도전해 보자"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "a28dface",
+   "execution_count": 2,
+   "id": "3b4729b0",
    "metadata": {
     "scrolled": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e98646c",
+   "id": "4ef25086",
    "metadata": {},
    "source": [
     "## STEP 1 : 시계열 데이터 준비"
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "664617a1",
+   "id": "730fd245",
    "metadata": {},
    "source": [
     "- 칼럼 종류: Date, Open, High, Low, Close, Adj Close, Volume\n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "91f5df6c",
+   "id": "3ff6f8be",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0a7d9f5c",
+   "id": "6bec3337",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e515470",
+   "id": "d7fd9f78",
    "metadata": {},
    "source": [
     "## STEP 2 : 각종 전처리 수행\n",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "af70c1e2",
+   "id": "21df3e53",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8c286c2c",
+   "id": "33f7351a",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8302712b",
+   "id": "c527f15d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d47742c1",
+   "id": "57af77a6",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a510cad2",
+   "id": "7d249043",
    "metadata": {},
    "source": [
     "## STEP 3 : 시계열 안정성 분석\n",
@@ -235,8 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "4c5c11f4",
+   "execution_count": 9,
+   "id": "82e5b1b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,8 +256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "418d59fe",
+   "execution_count": 10,
+   "id": "4ab6010d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "52fc6668",
+   "id": "be127ec4",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "9648ac2f",
+   "id": "ae170427",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "2b16c808",
+   "id": "c1cc9889",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3de50a5",
+   "id": "fbec0576",
    "metadata": {},
    "source": [
     "## STEP 4: 학습, 테스트 데이터셋 분리"
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "4fc162b9",
+   "id": "a6fc978a",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c8d38e61",
+   "id": "6e3c4018",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0116a5b3",
+   "id": "b1104a4a",
    "metadata": {},
    "source": [
     "## STEP 5 : 적정 ARIMA 모수 찾기\n",
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e34a760a",
+   "id": "cc353a32",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "b6119882",
+   "id": "9f6a563d",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "415965db",
+   "id": "85a06569",
    "metadata": {},
    "source": [
     "## STEP 6 : ARIMA 모델 훈련과 테스트\n",
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "cdbf1154",
+   "id": "cd5f87b6",
    "metadata": {
     "scrolled": true
    },
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "6105e052",
+   "id": "d6a428ae",
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "decaf9ff",
+   "id": "995f4ae8",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "14f09bca",
+   "id": "326b3c80",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab222221",
+   "id": "f5f91662",
    "metadata": {},
    "source": [
     "## STEP 7 : 다른 주식 종목 예측해 보기\n"
@@ -785,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "b5003486",
+   "id": "f4fe4b2d",
    "metadata": {},
    "outputs": [
     {
@@ -805,18 +805,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "319d42ac",
+   "execution_count": 3,
+   "id": "653594d0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "\n",
+    "\n",
     "dataset_filepath = os.getenv('HOME') + '/aiffel/Time_Series/data/MSFT.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "6970b20c",
+   "execution_count": 4,
+   "id": "47044ad2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,8 +832,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "8b662e11",
+   "execution_count": 5,
+   "id": "cd6d7052",
    "metadata": {
     "scrolled": true
    },
@@ -844,7 +850,7 @@
        "Name: Close, dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70681252",
+   "id": "e9dd2d1e",
    "metadata": {},
    "source": [
     "### Microsoft 주식 예측"
@@ -863,8 +869,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "e2e2768e",
+   "execution_count": 6,
+   "id": "ad4770f9",
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +879,7 @@
        "Series([], Name: Close, dtype: float64)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,8 +892,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "4cae59de",
+   "execution_count": 7,
+   "id": "a7c4a450",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,8 +903,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "f0e579c7",
+   "execution_count": 11,
+   "id": "4a0f8de9",
    "metadata": {},
    "outputs": [
     {
@@ -973,9 +979,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "8360b4aa",
-   "metadata": {},
+   "execution_count": 12,
+   "id": "8f22a2dd",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1000,18 +1008,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c97c9f90",
+   "metadata": {},
+   "source": [
+    "- test statistic 값이 모든 유의 수준의 임계값보다 작으므로, 시계열이 정상적임을 강하게 시사\n",
+    "- 즉, 이 시계열 데이터는 추세나 계절성에 의해 영향을 받지 않는 것으로 보이며, 시계열 분석이나 예측 모델링에 적합한 상태로 판단"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "e9eac333",
+   "execution_count": 16,
+   "id": "cc675814",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7efec12bdcd0>"
+       "<matplotlib.legend.Legend at 0x7f66f8cfbd00>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1040,8 +1057,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "94bb130e",
+   "execution_count": 13,
+   "id": "8d4f428a",
    "metadata": {},
    "outputs": [
     {
@@ -1088,8 +1105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "c7606b10",
+   "execution_count": 14,
+   "id": "225cd74e",
    "metadata": {},
    "outputs": [
     {
@@ -1137,8 +1154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "67700aa0",
+   "execution_count": 17,
+   "id": "88615335",
    "metadata": {},
    "outputs": [
     {
@@ -1165,8 +1182,8 @@
       "==============================================================================\n",
       "Dep. Variable:                  Close   No. Observations:                  226\n",
       "Model:                 ARIMA(2, 0, 1)   Log Likelihood                 633.925\n",
-      "Date:                Sun, 03 Mar 2024   AIC                          -1257.850\n",
-      "Time:                        09:45:38   BIC                          -1240.747\n",
+      "Date:                Thu, 14 Mar 2024   AIC                          -1257.850\n",
+      "Time:                        08:21:43   BIC                          -1240.747\n",
       "Sample:                             0   HQIC                         -1250.948\n",
       "                                - 226                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -1202,8 +1219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "b44e7d2c",
+   "execution_count": 18,
+   "id": "da15fb4e",
    "metadata": {},
    "outputs": [
     {
@@ -1245,8 +1262,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "a46e8550",
+   "execution_count": 20,
+   "id": "8d40b9dc",
    "metadata": {
     "scrolled": true
    },
@@ -1263,6 +1280,9 @@
     }
    ],
    "source": [
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "import math\n",
+    "\n",
     "mse = mean_squared_error(np.exp(test_data), np.exp(fc))\n",
     "print('MSE: ', mse)\n",
     "\n",
@@ -1278,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "452cb5bd",
+   "id": "ff7cd4c8",
    "metadata": {},
    "source": [
     "### NVIDA 주식 예측"
@@ -1286,10 +1306,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "79fc4ecb",
+   "execution_count": 1,
+   "id": "617407e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_31/946930069.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdataset_filepath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetenv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'HOME'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'/aiffel/Time_Series/data/NVDA.csv'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
+    }
+   ],
    "source": [
     "dataset_filepath = os.getenv('HOME') + '/aiffel/Time_Series/data/NVDA.csv'"
    ]
@@ -1297,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "b1a576de",
+   "id": "b25745ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1308,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "5cb019e5",
+   "id": "3761dc2f",
    "metadata": {
     "scrolled": false
    },
@@ -1337,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "d7fbb3b6",
+   "id": "d181aead",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "5143c0b7",
+   "id": "80bb2840",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1371,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "747659a4",
+   "id": "2c220555",
    "metadata": {},
    "outputs": [
     {
@@ -1447,7 +1479,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "aae504cb",
+   "id": "4a678f5e",
    "metadata": {},
    "outputs": [
     {
@@ -1475,7 +1507,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "bec6cb7a",
+   "id": "d8d99212",
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1546,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "0ee0068c",
+   "id": "fb48b3b0",
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "dde4d5ff",
+   "id": "16c63bbf",
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1643,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "7dabfa04",
+   "id": "31656a18",
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1704,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "d7d5d7ea",
+   "id": "e97d9ea3",
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1747,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "d872c01d",
+   "id": "f6a96fb7",
    "metadata": {
     "scrolled": false
    },
@@ -1747,7 +1779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d3062c1",
+   "id": "4f146da5",
    "metadata": {},
    "source": [
     "### Apple 주식 예측"
@@ -1756,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "2f899ab3",
+   "id": "c27f05f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1766,7 +1798,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "e64463cb",
+   "id": "f9903ad9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1777,7 +1809,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "016eac72",
+   "id": "030f6224",
    "metadata": {
     "scrolled": false
    },
@@ -1812,7 +1844,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "c6fa0c36",
+   "id": "6f4172af",
    "metadata": {},
    "outputs": [
     {
@@ -1835,7 +1867,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "dcfe3a30",
+   "id": "503fb13a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1846,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "0e637545",
+   "id": "595a2571",
    "metadata": {},
    "outputs": [
     {
@@ -1922,7 +1954,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "f7c12ce4",
+   "id": "3ee2c76f",
    "metadata": {},
    "outputs": [
     {
@@ -1950,7 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "cfea6c34",
+   "id": "faea0535",
    "metadata": {},
    "outputs": [
     {
@@ -1989,7 +2021,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "920e0644",
+   "id": "f2271f41",
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "2954bc72",
+   "id": "b1ad845c",
    "metadata": {},
    "outputs": [
     {
@@ -2086,7 +2118,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "f0cf7c9b",
+   "id": "8f5dfb96",
    "metadata": {},
    "outputs": [
     {
@@ -2147,7 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "21e5f8ef",
+   "id": "7ffe72b8",
    "metadata": {},
    "outputs": [
     {
@@ -2190,7 +2222,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "06d0eca9",
+   "id": "1531a54a",
    "metadata": {
     "scrolled": false
    },
@@ -2222,7 +2254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35281940",
+   "id": "1e50f73e",
    "metadata": {},
    "source": [
     "### 회고"
@@ -2230,7 +2262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55afeae8",
+   "id": "9944b25b",
    "metadata": {},
    "source": [
     "- 배운 내용 : ARIMA model, pq를 위한 ACF, PAFC 사용과 d 근거가 되는 차분 과정\n",
@@ -2246,33 +2278,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ec58937",
+   "cell_type": "markdown",
+   "id": "ca608b6c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- 낮은 예측 오차율로 시장 변동성을 잘 포착하고 주가 움직임을 정교하게 예측 할 수 있을 것.. 정말?!\n",
+    "- 특히 예측 오차율이 상당히 낮아, 이 모델들이 실제 투자 결정에 유의미한 인사이트를 제공할 가능성이 높아 보인다. 다만, 항상 모델이 과거 데이터에 기반한 예측을 제공함을 기억하고, 시장의 불확실성 요소에 대비해야 한다. 나는 이걸 기반으로 살 것 같진 않다.(당연히..)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5aeb88c5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1754ed2d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2e602d8",
+   "id": "0413e5d5",
    "metadata": {},
    "outputs": [],
    "source": []
