Update HuggingFace Custom PJT.ipynb

--- a/Quest_0326/HuggingFace Custom PJT.ipynb
+++ b/Quest_0326/HuggingFace Custom PJT.ipynb
@@ -930,7 +930,7 @@
     "    preprocessed_text = preprocess_text(data['document'])\n",
     "\n",
     "    return huggingface_tokenizer(\n",
-    "        data['document'],\n",
+    "        preprocessed_text,\n",
     "        truncation = True,\n",
     "        padding = True,\n",
     "        max_length=40,\n",
