--- a/Quest_0322/MovieReviewSentimentAnalysis.ipynb
+++ b/Quest_0322/MovieReviewSentimentAnalysis.ipynb
@@ -1333,7 +1333,7 @@
    "id": "34f940be",
    "metadata": {},
    "source": [
-    "## 0.85 넘기기(반올림^^_)"
+    "## 0.85 >= accuracy"
    ]
   },
   {
